fix header bar items alignement

--- a/src/app/core/components/header-bar/header-bar.component.scss
+++ b/src/app/core/components/header-bar/header-bar.component.scss
@@ -1,6 +1,4 @@
 .navigation-list {
-  margin-right: 25px;
-  margin-left: 15px;
   height: 100%;
   display: flex;
   align-items: center;
